Corrected app partitioning

--- a/src/app/github-search-form/search-form.component.html
+++ b/src/app/github-search-form/search-form.component.html
@@ -1,12 +1,12 @@
 <div class=results id="form">
-    <form action="">
+    <form>
       <div class="form-group">
         <div class="row">
           <div class="col-md-8">
-            <input type="text" class="form-control" placeholder="Search the username of any github user!"name="username">
+            <input type="text" class="form-control mt-5" placeholder="Search the username of any github user!"name="username">
           </div>
           <div class="col-sm-4">
-            <button class="btn">Search</button>
+            <button class="btn mt-5">Search</button>
           </div>
         </div>
       </div>
