--- a/src/app/github-search-form/search-form.component.html
+++ b/src/app/github-search-form/search-form.component.html
@@ -1,15 +1,23 @@
-<div class=results id="form">
-    <form>
-      <div class="form-group">
-        <div class="row">
-          <div class="col-md-8">
-            <input type="text" class="form-control mt-5" placeholder="Search the username of any github user!"name="username">
-          </div>
-          <div class="col-sm-4">
-            <button class="btn mt-5">Search</button>
-          </div>
+<div class="container mt-3">
+  <div class="row">
+    <div class="col">
+      <div class="card">
+        <div class="card-header bg-secondary text-white">
+          <h3>Github User Search</h3>
+        </div>
+        <div class="card-body">
+          <form class="form-inline" (submit)="searchUser">
+            <div class="form-group col-md-8">
+              <input  name="user" type="text" class="form-control" placeholder="Search the username of any github user!"name="username">
+              <div>
+                  <input type="submit" value="Search" class="btn btn-secondary btn-sm"/>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
-    </form>
+    </div>
+  </div>
 </div>
-  
+
+
