--- a/src/app/github-profile/profile.component.html
+++ b/src/app/github-profile/profile.component.html
@@ -46,10 +46,12 @@
             <div class="panel panel-default">
               <h3 class="panel-title">Repositories</h3>
             </div>
-            <!-- <div class="panel-body" *ngFor="let repo of repos">
-              <P>
+            <div class="panel-body" *ngFor="let repo of repos">
+              <P class="clearfix">
+                {{repo.name}}<a href="{{repo.html_url}}" target="_blank" class="btn btn-warning btn-sm pull-right">View Project</a>
               </P>
-            </div> -->
+               <p>{{repo.description}}</p>
+            </div>
           </div>
         </div>
       </div>
