--- a/src/app/github-profile/profile.component.html
+++ b/src/app/github-profile/profile.component.html
@@ -36,7 +36,7 @@
           <img src="{{profile.avatar_url}}" class="img-circle img-responsive" alt="Profile Image">
         </div>
         <div class="col-sm-4 container">
-          <div>
+          <div class="flex flex-row">
             <P>
               <span class="label label-default">{{profile.followers}} Followers</span>
               <span class="label label-primary"> Following: {{profile.following}}</span>
@@ -46,7 +46,7 @@
             <div class="panel panel-default">
               <h3 class="panel-title">Repositories</h3>
             </div>
-            <div class="panel-body" *ngFor="let repo of repos">
+            <div class="panel-body mt-4 flex flex-wrap " *ngFor="let repo of repos">
               <P class="clearfix">
                 {{repo.name}}<a href="{{repo.html_url}}" target="_blank" class="btn btn-warning btn-sm pull-right">View Project</a>
               </P>
