--- a/src/app/github-profile/profile.component.html
+++ b/src/app/github-profile/profile.component.html
@@ -6,14 +6,16 @@
           <h3>Github User Search</h3>
         </div>
         <div class="card-body">
-          <form class="form-inline">
+
+          <form class="form-inline" id="search-form">
             <div class="form-group col-md-8 mt-2">
-              <input  name="user" type="text" class="form-control" placeholder="Search the username of any github user!"name="username">
+              <input  name="user" type="text" class="form-control" placeholder="Search the username of any github user!"name="username" [(ngModel)]="username" (keyup)="findProfile()">
               <div class="container">
                   <input type="submit" value="Search" class="btn btn-secondary btn-sm mt-3"/>
               </div>
             </div>
           </form>
+
         </div>
       </div>
     </div>
