--- a/src/app/github-profile/profile.component.html
+++ b/src/app/github-profile/profile.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col">
       <div class="card">
-        <div class="card-header bg-secondary text-white">
+        <div class="card-header bg-primary text-white">
           <h3>Github User Search</h3>
         </div>
         <div class="card-body">
@@ -25,7 +25,7 @@
 <div *ngIf="profile" class="container"> 
   <div class="panel panel-default">
     <div class="panel-heading mt-3">
-        <h3>{{profile.name}} <small>({{profile.login}})</small></h3>
+        <h3>{{profile.name | case}} <small>({{profile.login}})</small></h3>
     </div>
     <div class="col-sm-4 mt-2">
       <p *ngIf="profile.bio">{{profile.bio}}</p>
