--- a/src/app/github-profile/profile.component.html
+++ b/src/app/github-profile/profile.component.html
@@ -1,8 +1,8 @@
 <div class="container mt-3">
   <div class="row">
     <div class="col">
-      <div class="card">
-        <div class="card-header bg-primary text-white">
+      <div class="card" id="main">
+        <div class="card-header text-black" id="top">
           <h3>Github User Search</h3>
         </div>
         <div class="card-body">
@@ -11,7 +11,7 @@
             <div class="form-group col-md-8 mt-2">
               <input  name="user" type="text" class="form-control" placeholder="Search the username of any github user!"name="username" [(ngModel)]="username" (keyup)="findProfile()">
               <div class="container">
-                  <input type="submit" value="Search" class="btn btn-secondary btn-sm mt-3"/>
+                  <input type="submit" value="Search" class="btn btn-sm mt-3" id="click"/>
               </div>
             </div>
           </form>
@@ -25,7 +25,8 @@
 <div *ngIf="profile" class="container"> 
   <div class="panel panel-default">
     <div class="panel-heading mt-3">
-        <h3 appHighlight>{{profile.name | case}} <small>({{profile.login}})</small></h3>
+
+        <h3>{{profile.name | case}} <small>({{profile.login}})</small></h3>
     </div>
     <div class="col-sm-4 mt-2">
       <p *ngIf="profile.bio">{{profile.bio}}</p>
@@ -39,6 +40,7 @@
         </div>
         <div class="col-sm-4 container">
           <div class="flex flex-row">
+            <!-- <p appHighlight>{{profile.name | case}}</p> -->
             <P>
               <span class="label label-default">{{profile.followers}} Followers</span>
               <span class="label label-primary"> Following: {{profile.following}}</span>
@@ -46,7 +48,7 @@
             </P>
             <p><a href="{{profile.html_url}}" target="_blank"class="btn btn-success btn-sm">View Profile on GitHub</a></p>
             <div class="panel panel-default">
-              <h3 class="panel-title">Repositories</h3>
+              <h2 appHighlight class="panel-title">Repositories</h2>
             </div>
             <div class="panel-body mt-4 flex flex-wrap " *ngFor="let repo of repos">
               <P class="clearfix">
