--- a/src/app/github-profile/profile.component.css
+++ b/src/app/github-profile/profile.component.css
@@ -1,11 +1,11 @@
 img{
-    border-radius: 150px;
+    border-radius: 200px;
 }
-#search{
+/* #search{
     padding-bottom: 10px;
-}
+} */
 p{
-    font-size: 15px;
+    font-size: 20px;
 }
 details{
     font-weight: bold;
@@ -13,18 +13,25 @@ details{
 }
 #reponame{
     font-size: 30px;
-    font-weight: 700;
-    color:cyan;
+    font-weight: 800;
+    color:rgb(56, 175, 128);
 
 }
+
 #top{
-    background-color:cyan;
-    
+    background-color:rgb(75, 210, 201);
+    padding: 15px;  
 }
-#click{
+span{
+    font-size: 20px;
+    margin-left: 10px;
+}
+/* #click{
     background-color:aqua;
-}
+} */
 #main{
     align-items: center;
-
+}
+#search-form{
+    padding: 10px;
 }
