--- a/src/app/github-profile/profile.component.html
+++ b/src/app/github-profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-3">
   <div class="row">
     <div class="col">
-      <div>
+      <div class="logo">
         <img src="./assets/images/git8.png">
       </div>
       <div class="card mt-3">
@@ -9,7 +9,6 @@
           <h3>Github User Search</h3>
         </div>
         <div class="card-body">
-
           <form class="form-inline" id="search-form">
             <div class="form-group col-md-8 mt-2">
               <input  name="user" type="text" class="form-control" placeholder="Search the username of any github user!" id="search"
@@ -58,7 +57,8 @@
               <P class="clearfix" id="reponame">
                 {{repo.name}}
               </P>
-               <p>{{repo.description}} <br><a href="{{repo.html_url}}" target="_blank" class="btn btn-warning btn-sm">View Project</a><br></p>
+               <p *ngIf="repo.description">Description: {{repo.description}} <br><a href="{{repo.html_url}}" target="_blank" class="btn btn-warning btn-sm">View Project</a><br></p>
+               <p *ngIf="repo.language">Languages: {{repo.language}} <br>Forks:{{repo.forks_count}} <br></p>
             </div>
           </div>
         </div>
