--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,8 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 body{
-    /* background-image: url("./assets/images/git8.png"); */
-    background-position: 50%;
-    background-size: 600px;
+    background-image: url("./assets/images/back1.jpeg");
+    background-position: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
     margin: auto;
